esto es un párrafo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Portafolio Mau</h1>
-    <main>hola</main>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, minus fugiat consequatur nisi id cum maiores nulla consectetur tempora exercitationem recusandae error, beatae, sunt illum placeat commodi molestias fuga architecto!
+    Deleniti eaque vitae cupiditate aperiam labore ducimus eius iusto vero similique tenetur rerum, saepe animi accusantium eum? In quae sed non, saepe ea eveniet iusto provident laudantium! Harum, in officiis!</p>
 </body>
 </html>
