--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Mau</title>
 </head>
 <body>
-    <h1>Portafolio Mau</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, minus fugiat consequatur nisi id cum maiores nulla consectetur tempora exercitationem recusandae error, beatae, sunt illum placeat commodi molestias fuga architecto!
-    Deleniti eaque vitae cupiditate aperiam labore ducimus eius iusto vero similique tenetur rerum, saepe animi accusantium eum? In quae sed non, saepe ea eveniet iusto provident laudantium! Harum, in officiis!</p>
+    <div class="main">
+        <div class="container">
+            <header>
+                <h1>Portafolio Mau</h1>
+            </header>
+            <div class="botonera">
+                <div class="btn">
+                    <a href="https://mattewrobles.github.io/" target="_blank" rel="noopener noreferrer">GitHub</a>
+                </div>
+            </div>
+            <div class="botonera">
+                <div class="btn">
+                    <a href="https://mattewrobles.github.io/" target="_blank" rel="noopener noreferrer">GitHub</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
