--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
     <div class="main">
         <div class="container">
             <header>
-                <h1>Portafolio Mau</h1>
+                <div class="letters">
+                    <span>P</span>
+                    <span>O</span>
+                    <span>R</span>
+                    <span>T</span>
+                    <span>F</span>
+                    <span>O</span>
+                    <span>L</span>
+                    <span>I</span>
+                    <span>O</span>
+                </div>
+                <H1 class="mau">Portfolio de Mau</H1>
             </header>
             <div class="botonera">
                 <div class="btn">
-                    <a href="https://mattewrobles.github.io/" target="_blank" rel="noopener noreferrer">GitHub</a>
-                </div>
-            </div>
-            <div class="botonera">
-                <div class="btn">
-                    <a href="https://mattewrobles.github.io/" target="_blank" rel="noopener noreferrer">GitHub</a>
+                    <a href="https://mattewrobles.github.io/hola_mundo/" target="_blank" rel="noopener noreferrer">Hola Mundo</a>
                 </div>
             </div>
         </div>
