--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <div class="btn">
                     <a href="https://mattewrobles.github.io/hola_mundo/" target="_blank" rel="noopener noreferrer">Hola Mundo</a>
                 </div>
+                <div class="btn"></div>
+                    <a href="https://mattewrobles.github.io/condicionales/" target="_blank" rel="noopener noreferrer">Condicionales</a>
+                </div>
             </div>
         </div>
     </div>
