--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
                 <div class="btn">
                     <a href="https://mattewrobles.github.io/hola_mundo/" target="_blank" rel="noopener noreferrer">Hola Mundo</a>
                 </div>
-                <div class="btn"></div>
+                <div class="btn">
                     <a href="https://mattewrobles.github.io/condicionales/" target="_blank" rel="noopener noreferrer">Condicionales</a>
                 </div>
+                <div class="btn">
+                    <a href="https://mattewrobles.github.io/computer_vision/" target="_blank" rel="noopener noreferrer">Computer Vision</a>
+                </div>    
             </div>
+                
+        </div>
         </div>
     </div>
 </body>
