--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
     <div class="main">
         <div class="container">
             <header>
-                <div class="letters">
-                    <span>P</span>
-                    <span>O</span>
-                    <span>R</span>
-                    <span>T</span>
-                    <span>F</span>
-                    <span>O</span>
-                    <span>L</span>
-                    <span>I</span>
-                    <span>O</span>
+                <div id="preloader">
+                    <div class="letters">
+                        <span>P</span>
+                        <span>O</span>
+                        <span>R</span>
+                        <span>T</span>
+                        <span>F</span>
+                        <span>O</span>
+                        <span>L</span>
+                        <span>I</span>
+                        <span>O</span>
+                    </div>
                 </div>
                 <H1 class="name">Portfolio de Mauricio Robles</H1>
             </header>
@@ -50,6 +52,7 @@
             </div>
         </div>
     </div>
+    <script src="scketch.js"></script>
 
 </body>
 </html>
