--- a/index.html
+++ b/index.html
@@ -1,58 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="files/favicons/icons8-circled-m-ios-17-filled-96.png">
-    <script src="https://kit.fontawesome.com/0ebd8e088e.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="files/favicons/128x128.png" />
+    <script
+      src="https://kit.fontawesome.com/0ebd8e088e.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Mauricio Robles</title>
-</head>
-<body>
+  </head>
+  <body>
+    <canvas id="matrix-canvas"></canvas>
     <div class="main">
-        <div class="container">
-            <header>
-                <div id="preloader">
-                    <div class="letters">
-                        <span>P</span>
-                        <span>O</span>
-                        <span>R</span>
-                        <span>T</span>
-                        <span>F</span>
-                        <span>O</span>
-                        <span>L</span>
-                        <span>I</span>
-                        <span>O</span>
-                    </div>
-                </div>
-                <H1 class="name">Portfolio de Mauricio Robles</H1>
-            </header>
-            <div class="botonera">
-                <div class="cont">
-                        <a class="hub" href="https://github.com/mattewrobles">
-                            <i class="fa-brands fa-github fa-2xl"></i>
-                        </a>
-                </div>
-                <div class="btn">
-                    <a href="https://mattewrobles.github.io/hola_mundo/" target="_blank" rel="noopener noreferrer" class="button">Hola Mundo</a>
-                </div>
-                
-                <div class="btn">
-                    <a href="https://mattewrobles.github.io/condicionales/" target="_blank" rel="noopener noreferrer" class="button">Condicionales</a>
-                </div>
-                <div class="btn">
-                    <a href="https://mattewrobles.github.io/computer_vision/" target="_blank" rel="noopener noreferrer" class="button">Computer Vision</a>
-                </div>
-                <div class="btn">
-                    <a href="https://mattewrobles.github.io/programacion_orientada_a_objetos/" target="_blank" rel="noopener noreferrer" class="button">Programación orientada a objetos</a>
-                </div> 
+      <div class="container">
+        <header>
+          <div id="preloader">
+            <div class="letters">
+              <span>P</span>
+              <span>O</span>
+              <span>R</span>
+              <span>T</span>
+              <span>F</span>
+              <span>O</span>
+              <span>L</span>
+              <span>I</span>
+              <span>O</span>
             </div>
-        </div>
-    </div>
-    <script src="scketch.js"></script>
+          </div>
+          <h1 class="name">Mauricio Robles</h1>
+        </header>
+        <div class="botonera">
+          <div class="cont">
+            <a class="hub" href="https://github.com/mattewrobles">
+              <i class="fa-brands fa-github fa-2xl"></i>
+            </a>
+          </div>
+          <div class="btn">
+            <a
+              href="https://mattewrobles.github.io/hola_mundo/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button"
+              >Hola Mundo</a
+            >
+          </div>
 
-</body>
+          <div class="btn">
+            <a
+              href="https://mattewrobles.github.io/condicionales/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button"
+              >Condicionales</a
+            >
+          </div>
+          <div class="btn">
+            <a
+              href="https://mattewrobles.github.io/computer_vision/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button"
+              >Computer Vision</a
+            >
+          </div>
+          <div class="btn">
+            <a
+              href="https://mattewrobles.github.io/programacion_orientada_a_objetos/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button"
+              >Programación orientada a objetos</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+    <script src="sketch.js"></script>
+  </body>
 </html>
