--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
       src="https://kit.fontawesome.com/0ebd8e088e.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <title>Mauricio Robles</title>
   </head>
   <body>
     <canvas id="matrix-canvas"></canvas>
-    <div class="main">
+    <main class="main">
       <div class="container">
         <header>
           <div id="preloader">
@@ -44,45 +45,42 @@
             </a>
           </div>
           <div class="btn">
-            <a
-              href="https://mattewrobles.github.io/hola_mundo/"
+            <a href="https://mattewrobles.github.io/hola_mundo/"
               target="_blank"
               rel="noopener noreferrer"
-              class="button"
-              >Hola Mundo</a
-            >
+              class="button">Hola Mundo</a>
           </div>
 
           <div class="btn">
-            <a
-              href="https://mattewrobles.github.io/condicionales/"
+            <a href="https://mattewrobles.github.io/condicionales/"
               target="_blank"
               rel="noopener noreferrer"
-              class="button"
-              >Condicionales</a
-            >
+              class="button">Condicionales</a>
           </div>
           <div class="btn">
-            <a
-              href="https://mattewrobles.github.io/computer_vision/"
+            <a href="https://mattewrobles.github.io/computer_vision/"
               target="_blank"
               rel="noopener noreferrer"
-              class="button"
-              >Computer Vision</a
-            >
+              class="button">Computer Vision</a>
           </div>
           <div class="btn">
-            <a
-              href="https://mattewrobles.github.io/programacion_orientada_a_objetos/"
+            <a href="https://mattewrobles.github.io/programacion_orientada_a_objetos/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button">Programación orientada a objetos</a>
+          </div>
+
+          <div class="btn">
+            <a href="https://mattewrobles.github.io/slider/"
               target="_blank"
               rel="noopener noreferrer"
               class="button"
-              >Programación orientada a objetos</a
-            >
+              >Slider</a>
           </div>
+
         </div>
       </div>
-    </div>
+    </main>
     <script src="script.js"></script>
     <script src="sketch.js"></script>
   </body>
