--- a/index.html
+++ b/index.html
@@ -45,43 +45,108 @@
             </a>
           </div>
           <div class="btn">
-            <a href="https://mattewrobles.github.io/hola_mundo/"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="button">Hola Mundo</a>
-          </div>
-
-          <div class="btn">
-            <a href="https://mattewrobles.github.io/condicionales/"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="button">Condicionales</a>
-          </div>
-          <div class="btn">
-            <a href="https://mattewrobles.github.io/computer_vision/"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="button">Computer Vision</a>
-          </div>
-          <div class="btn">
-            <a href="https://mattewrobles.github.io/programacion_orientada_a_objetos/"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="button">Programación orientada a objetos</a>
-          </div>
-
-          <div class="btn">
-            <a href="https://mattewrobles.github.io/slider/"
+            <a
+              href="https://mattewrobles.github.io/hola_mundo/"
               target="_blank"
               rel="noopener noreferrer"
               class="button"
-              >Slider</a>
+              >Hola Mundo</a
+            >
+          </div>
+          <div class="btn">
+            <a
+              href="https://mattewrobles.github.io/condicionales/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button"
+              >Condicionales</a
+            >
+          </div>
+          <div class="btn">
+            <a
+              href="https://mattewrobles.github.io/computer_vision/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button"
+              >Computer Vision</a
+            >
+          </div>
+          <div class="btn">
+            <a
+              href="https://mattewrobles.github.io/programacion_orientada_a_objetos/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button"
+              >Programación orientada a objetos</a
+            >
+          </div>
+          <div class="btn">
+            <a
+              href="https://mattewrobles.github.io/slider/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button"
+              >Slider</a
+            >
+          </div>
+          <div class="btn">
+            <a
+              href="https://mattewrobles.github.io/for_loop/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button"
+              >For loop</a
+            >
           </div>
 
+          <div class="btn">
+            <a
+              href="https://mattewrobles.github.io/wave_collapse/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button"
+              >Wave function Collapse</a
+            >
+          </div>
         </div>
       </div>
     </main>
     <script src="script.js"></script>
     <script src="sketch.js"></script>
+    <script>
+      let circles = [];
+
+      function setup() {
+        let canvas = createCanvas(windowWidth, windowHeight);
+        canvas.position(0, 0);
+        canvas.style("z-index", "-1");
+        noStroke();
+      }
+
+      function draw() {
+        clear();
+        background(0, 0, 0, 25);
+
+        for (let i = circles.length - 1; i >= 0; i--) {
+          let circle = circles[i];
+          fill(0, 255, 0, circle.alpha);
+          ellipse(circle.x, circle.y, circle.size);
+          circle.size += 2;
+          circle.alpha -= 5;
+
+          if (circle.alpha <= 0) {
+            circles.splice(i, 1);
+          }
+        }
+      }
+
+      function mouseMoved() {
+        circles.push({ x: mouseX, y: mouseY, size: 10, alpha: 255 });
+      }
+
+      function windowResized() {
+        resizeCanvas(windowWidth, windowHeight);
+      }
+    </script>
   </body>
 </html>
